--- a/memos/total-energies/2025-02-19-model-definitions/main.tex
+++ b/memos/total-energies/2025-02-19-model-definitions/main.tex
@@ -38,6 +38,8 @@
 \rfoot{Recipients: \textbf{Brian Friis Nielsen} \& \textbf{Valentin Ispas}}
 \lfoot{page \thepage\ of\ \pageref{LastPage}}
 
+% \date{2025-02-25}
+
 \begin{document}
 
 	\input{../../../tex/models/strategic.tex}
