--- a/presentations/operation-research-seminar/main.tex
+++ b/presentations/operation-research-seminar/main.tex
@@ -253,5 +253,20 @@
 		\drawAtomicPointerSwapping[threesolutions=true]
     \end{block}
 \end{frame}
+\begin{frame}{}
+    \begin{block}{Include the many different ways that metaheuristics can be
+	understood.}
+	\begin{itemize}
+		\item Chinese literature.
+	\end{itemize}
+    \end{block}
+\end{frame}
+\begin{frame}{}
+    \begin{block}{Decision Problems versus Process Problems.}
+	\begin{itemize}
+		\item Chinese literature.
+	\end{itemize}
+    \end{block}
+\end{frame}
 
 \end{document}
